--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -37,6 +37,12 @@
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
 
 [[main]]
+  name = "Research"
+  url = "/publication"
+  weight = 60
+
+
+[[main]]
 name = "CV"
 url = "files/cv.pdf"
 weight = 70
